--- a/app/overlay.ejs
+++ b/app/overlay.ejs
@@ -10,8 +10,11 @@
     <div id="accountSelectContent" style="display: none;">
         <span id="accountSelectHeader"><%- lang('overlay.accountSelectHeader') %></span>
         <div id="accountSelectList">
-            <div id="accountSelectListScrollable">
-                <!-- Accounts populated here. -->
+            <div id="microsoftAccountSelectListScrollable">
+                <!-- Microsoft accounts populated here. -->
+            </div>
+            <div id="mojangAccountSelectListScrollable">
+                <!-- Mojang accounts populated here. -->
             </div>
         </div>
         <div id="accountSelectActions">
