idk what i did, i'm going to revert some of this changes LMAO

--- a/app/login.ejs
+++ b/app/login.ejs
@@ -54,7 +54,7 @@
             </button>
             <div id="loginDisclaimer">
                 <span class="loginSpanDim" id="loginRegisterSpan">
-                    <a href="<%- lang('login.loginNeedAccountLink') %>"><%- lang('login.loginNeedAccountText') %></a>
+                    <a id="registerButton"><%- lang('login.loginNeedAccountText') %></a>
                 </span>
                 <p class="loginDisclaimerText"><%- lang('login.loginPasswordDisclaimer1') %></p>
                 <p class="loginDisclaimerText"><%- lang('login.loginPasswordDisclaimer2', { appName: lang('app.title') }) %></p>
