--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1700,7 +1700,7 @@ input:checked+.toggleSwitchSlider:before {
 
 /* Left hand side of an auth account element, for the skin image. */
 .settingsAuthAccountLeft {
-    padding: 5px 5px 5px 20px;
+    padding: 5px -1px 5px 20px;
 }
 
 /* Image of the auth account's skin. */
@@ -3210,12 +3210,10 @@ input:checked+.toggleSwitchSlider:before {
 
 /* User profile avatar container. */
 #avatarContainer {
-    border-radius: 50%;
-    border: 2px solid #cad7e1;
     box-sizing: border-box;
     background: rgba(1, 2, 1, 0.5);
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
     box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
     overflow: hidden;
     position: relative;
@@ -3224,7 +3222,7 @@ input:checked+.toggleSwitchSlider:before {
     background-size: contain;
 }
 
-/* Avatar edit overlay. */
+/* Avatar overlay. */
 #avatarOverlay {
     opacity: 0;
     position: absolute;
@@ -3235,13 +3233,13 @@ input:checked+.toggleSwitchSlider:before {
     transition: 0.25s ease;
     font-weight: bold;
     letter-spacing: 2px;
-    background-color: rgba(0, 0, 0, 0.35);
+    background-color: rgba(0, 0, 0, 0.00);
     -webkit-user-select: none;
-    border: none;
     cursor: pointer;
     width: 100%;
     height: 100%;
-    border-radius: 50%;
+    border-radius: 2%;
+    border: none;
 }
 
 #avatarOverlay:hover,
@@ -3250,7 +3248,7 @@ input:checked+.toggleSwitchSlider:before {
 }
 
 #avatarOverlay:active {
-    background-color: rgba(0, 0, 0, 0.45);
+    background-color: rgba(0, 0, 0, 0.00);
 }
 
 /* User profile name text. */
@@ -3261,9 +3259,11 @@ input:checked+.toggleSwitchSlider:before {
     letter-spacing: 1px;
     text-shadow: 0px 0px 20px black;
     position: absolute;
-    right: 95px;
-    text-align: right;
+    bottom: -25px; /* Ajuste conforme necessário */
+    left: 50%; /* Posiciona o texto centralizado horizontalmente */
+    transform: translateX(-50%); /* Ajuste para centralizar o texto */
     -webkit-user-select: initial;
+    text-align: center;
 }
 
 /* Social media icon content container. */
@@ -3271,9 +3271,9 @@ input:checked+.toggleSwitchSlider:before {
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 25px;
+    margin-top: 35px;
     height: calc(100% - 95px);
-    width: 70px;
+    width: 60px;
     align-items: center;
 }
 
@@ -3653,32 +3653,76 @@ input:checked+.toggleSwitchSlider:before {
 
 /* The launch button. */
 #launch_button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-weight: 900;
+    position: relative;
+    padding: 8px 25px;
+    border-radius: 7px;
+    border: 1px solid rgb(120, 235, 255);
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
     letter-spacing: 2px;
-    text-shadow: 0px 0px 0px #bebcbb;
-    font-size: 20px;
-    padding: 0px;
-    transition: 0.25s ease;
-    outline: none;
+    background: transparent;
+    color: #fff;
+    overflow: hidden;
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
 }
 
-#launch_button:hover,
-#launch_button:focus {
-    text-shadow: 0px 0px 20px #fff, 0px 0px 20px #fff;
+    #launch_button:hover {
+        background: rgb(72, 203, 255);
+        box-shadow: 0 0 13px 5px rgba(2, 119, 197, 0.815);
+        -webkit-transition: all 0.2s ease-out;
+        -moz-transition: all 0.2s ease-out;
+        transition: all 0.2s ease-out;
+    }
+
+        #launch_button:hover::before {
+            -webkit-animation: sh02 0.5s 0s linear;
+            -moz-animation: sh02 0.5s 0s linear;
+            animation: sh02 0.5s 0s linear;
+        }
+
+    #launch_button::before {
+        content: '';
+        display: block;
+        width: 0px;
+        height: 86%;
+        position: absolute;
+        top: 7%;
+        left: 0%;
+        opacity: 0;
+        background: #fff;
+        box-shadow: 0 0 50px 30px #fff;
+        -webkit-transform: skewX(-20deg);
+        -moz-transform: skewX(-20deg);
+        -ms-transform: skewX(-20deg);
+        -o-transform: skewX(-20deg);
+        transform: skewX(-20deg);
+    }
+
+@keyframes sh02 {
+    from {
+        opacity: 0;
+        left: 0%;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        left: 100%;
+    }
 }
 
 #launch_button:active {
-    color: #c7c7c7;
-    text-shadow: 0px 0px 20px #c7c7c7, 0px 0px 20px #c7c7c7;
-}
-
-#launch_button:disabled {
-    color: #c7c7c7;
-    cursor: default;
-    pointer-events: none;
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: box-shadow 0.2s ease-in;
+    -moz-transition: box-shadow 0.2s ease-in;
+    transition: box-shadow 0.2s ease-in;
 }
 
 
@@ -4302,6 +4346,28 @@ input:checked+.toggleSwitchSlider:before {
     position: absolute;
     width: 277px;
     height: auto;
+}
+
+/* Rotating image for the spinner. */
+#loadSpinnerImage {
+    width: 280px;
+    height: auto;
+    z-index: 400;
+}
+
+/* Rotating animation for the spinner. */
+@keyframes rotating {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* Class which is applied when the spinner image is spinning. */
+.rotating {
+    animation: rotating 10s linear infinite;
 }
 
 .login-box {
